--- a/mech208.html
+++ b/mech208.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Yang's Homepage</title>
+    <title>MECH208 - Yang Chao</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -35,52 +35,51 @@
 <!-- Nav -->
 <nav id="nav" class="fixed-navbar">
     <ul>
-        <li><a href="#About">About</a></li>
+        <li><a href="index.html#About">About</a></li>
         <li class="dropdown">
-            <a href="#Classes">Classes</a>
+            <a href="index.html#Classes">Classes</a>
             <ul class="dropdown-content">
                 <li><a href="mech208.html">MECH 208</a></li>
                 <li><a href="#">MECH 338</a></li>
             </ul>
         </li>
-        <li><a href="#Research">Research</a></li>
-        <li><a href="#Publications">Publications</a></li>
-        <li><a href="#People">People</a></li>
-        <li><a href="#MyHobbies">Hobbies</a></li>
+        <li><a href="index.html#Research">Research</a></li>
+        <li><a href="index.html#Publications">Publications</a></li>
+        <li><a href="index.html#People">People</a></li>
+        <li><a href="index.html#MyHobbies">Hobbies</a></li>
     </ul>
 </nav>
 
 <!-- Main -->
 <div id="main">
 
-<!-- About Section -->
-<section id="About" class="main">
-    <div class="inner">
-        <header class="major"><h2>About</h2></header>
-        <p>Welcome! I am Dr. Yang Chao, Assistant Professor at California State University, Chico. This site provides information about my courses, research, and more.</p>
-    </div>
-</section>
-
-<!-- Classes Section -->
+<!-- Classes -->
 <section id="Classes" class="main">
     <div class="spotlight">
         <div class="content">
             <header class="major">
                 <h2>MECH208 Introduction to Technical Computing</h2>
             </header>
+
             <article id="CurrentClasses" class="current-classes">
                 <h3>Course Description</h3>
-                <p>This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include:</p>
+                <p>
+                    This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include:
+                </p>
                 <ul>
                     <li>Kinematics and Kinetics</li>
                     <li>Fluid Flow</li>
                     <li>Thermal Systems</li>
                     <li>Fundamentals of Machine Learning</li>
                 </ul>
-                <p>The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</p>
+                <p>
+                    The course consists of 1 hour of lecture and 3 hours of laboratory work each week.
+                </p>
 
                 <h3>Course Objectives</h3>
-                <p>By the end of this course, students will be able to:</p>
+                <p>
+                    By the end of this course, students will be able to:
+                </p>
                 <ul>
                     <li>Use MATLAB to model and solve engineering problems.</li>
                     <li>Understand and apply numerical methods for engineering applications.</li>
@@ -89,45 +88,15 @@
                 </ul>
 
                 <h3>Recommended Textbooks</h3>
-                <p>Suggested readings and references for this course:</p>
+                <p>
+                    Suggested readings and references for this course:
+                </p>
                 <ul>
                     <li><em>Introduction to MATLAB for Engineers</em> by William J. Palm (ISBN: 9780073534879, McGraw-Hill Education, 2010).</li>
                     <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
                 </ul>
             </article>
         </div>
-    </div>
-</section>
-
-<!-- Research Section -->
-<section id="Research" class="main">
-    <div class="inner">
-        <header class="major"><h2>Research</h2></header>
-        <p>My research focuses on computational modeling, heat transfer, and machine learning in engineering applications. I aim to develop tools that bridge theory with hands-on application.</p>
-    </div>
-</section>
-
-<!-- Publications Section -->
-<section id="Publications" class="main">
-    <div class="inner">
-        <header class="major"><h2>Publications</h2></header>
-        <p>Coming soon: a list of peer-reviewed papers, conference proceedings, and technical reports.</p>
-    </div>
-</section>
-
-<!-- People Section -->
-<section id="People" class="main">
-    <div class="inner">
-        <header class="major"><h2>People</h2></header>
-        <p>This section highlights my collaborators, research assistants, and students contributing to our projects.</p>
-    </div>
-</section>
-
-<!-- My Hobbies Section -->
-<section id="MyHobbies" class="main">
-    <div class="inner">
-        <header class="major"><h2>My Hobbies</h2></header>
-        <p>Outside of work, I enjoy hiking, photography, reading sci-fi, and tinkering with electronics.</p>
     </div>
 </section>
 
@@ -142,6 +111,7 @@
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 
+<!-- Optional scroll indicator script (safe to keep) -->
 <script>
     document.addEventListener("scroll", function () {
         const sections = document.querySelectorAll("section");
