--- a/mech208.html
+++ b/mech208.html
@@ -2,7 +2,7 @@
     <strong>MECH208 Introduction to Technical Computing</strong>
     <span class="details">Fall 2024</span>
 
-    <div style="margin-top: 10px;">
+    <div class="box" style="margin-top: 1em;">
         <h4>Course Description</h4>
         <p>
             This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include:
@@ -28,13 +28,8 @@
 
         <h4>Recommended Textbooks</h4>
         <ul>
-            <li>
-                <em>Introduction to MATLAB for Engineers</em> by William J. Palm 
-                (ISBN: 9780073534879, McGraw-Hill Education, 2010).
-            </li>
-            <li>
-                <em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.
-            </li>
+            <li><em>Introduction to MATLAB for Engineers</em> by William J. Palm (ISBN: 9780073534879, McGraw-Hill Education, 2010).</li>
+            <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
         </ul>
     </div>
 </li>
