--- a/mech208.html
+++ b/mech208.html
@@ -1,35 +1,107 @@
-<li>
-    <strong>MECH208 Introduction to Technical Computing</strong>
-    <span class="details">Fall 2024</span>
+<!DOCTYPE HTML>
+<!--
+    Stellar by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+<head>
+    <title>MECH208 - Yang Chao</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-    <div class="box" style="margin-top: 1em;">
-        <h4>Course Description</h4>
-        <p>
-            This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include:
-        </p>
-        <ul>
-            <li>Kinematics and Kinetics</li>
-            <li>Fluid Flow</li>
-            <li>Thermal Systems</li>
-            <li>Fundamentals of Machine Learning</li>
-        </ul>
-        <p>
-            The course consists of 1 hour of lecture and 3 hours of laboratory work each week.
-        </p>
+    <!-- MathJax Configuration -->
+    <script>
+        window.MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ['\\[', '\\]']]
+            }
+        };
+    </script>
 
-        <h4>Course Objectives</h4>
-        <p>By the end of this course, students will be able to:</p>
-        <ul>
-            <li>Use MATLAB to model and solve engineering problems.</li>
-            <li>Understand and apply numerical methods for engineering applications.</li>
-            <li>Analyze and visualize data effectively using MATLAB tools.</li>
-            <li>Develop technical computing skills for future coursework and careers.</li>
-        </ul>
+    <!-- MathJax Loader -->
+    <script type="text/javascript" async
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
+</head>
+<body class="is-preload">
 
-        <h4>Recommended Textbooks</h4>
+<!-- Wrapper -->
+<div id="wrapper">
+
+    <!-- Header -->
+    <header id="header">
+        <h1>MECH208 Heat Transfer</h1>
+        <p>California State University, Chico</p>
+    </header>
+
+    <!-- Nav -->
+    <nav id="nav" class="fixed-navbar">
         <ul>
-            <li><em>Introduction to MATLAB for Engineers</em> by William J. Palm (ISBN: 9780073534879, McGraw-Hill Education, 2010).</li>
-            <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
+            <li><a href="index.html#About">About</a></li>
+            <li class="dropdown">
+                <a href="index.html#Classes">Classes</a>
+                <ul class="dropdown-content">
+                    <li><a href="mech208.html">MECH 208</a></li>
+                    <li><a href="mech338.html">MECH 338</a></li>
+                </ul>
+            </li>
+            <li><a href="index.html#Research">Research</a></li>
+            <li><a href="index.html#Publications">Publications</a></li>
+            <li><a href="index.html#People">People</a></li>
+            <li><a href="index.html#MyHobbies">Hobbies</a></li>
         </ul>
-    </div>
-</li>
+    </nav>
+
+    <!-- Main -->
+    <div id="main" class="alt">
+
+        <section class="main">
+            <header class="major">
+                <h2>Course Description</h2>
+            </header>
+
+            <div class="course-block">
+                <h3><strong>MECH208 Introduction to Technical Computing</strong></h3>
+                <span class="details">Fall 2024</span>
+                <p><strong>Course Description:</strong> This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</p>
+
+                <p><strong>Course Objectives:</strong></p>
+                <ul>
+                    <li>Use MATLAB to model and solve engineering problems.</li>
+                    <li>Understand and apply numerical methods for engineering applications.</li>
+                    <li>Analyze and visualize data effectively using MATLAB tools.</li>
+                    <li>Develop technical computing skills for future coursework and careers.</li>
+                </ul>
+
+                <p><strong>Recommended Textbooks:</strong></p>
+                <ul>
+                    <li><em>Introduction to MATLAB for Engineers</em> by William J. Palm (ISBN: 9780073534879, McGraw-Hill Education, 2010).</li>
+                    <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
+                </ul>
+            </div>
+        </section>
+
+    </div> <!-- End of #main -->
+
+    <!-- Footer -->
+    <footer id="footer">
+        <p class="copyright">&copy; Yang Chao. Design adapted from <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
+    </footer>
+
+</div> <!-- End of #wrapper -->
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
+</html>
