--- a/mech208.html
+++ b/mech208.html
@@ -34,7 +34,7 @@
 
     <!-- Header -->
     <header id="header">
-        <h1>MECH208 Heat Transfer</h1>
+        <h1>MECH208 Introduction to Technical Computing</h1>
         <p>California State University, Chico</p>
     </header>
 
