--- a/mech208.html
+++ b/mech208.html
@@ -51,7 +51,7 @@
     </nav>
 
     <!-- Main -->
-    <div id="main" class="alt">
+    <div id="main" class="alt" style="padding-top: 2em;">
 
         <section class="main">
             <header class="major">
