--- a/mech208.html
+++ b/mech208.html
@@ -55,11 +55,11 @@
 
         <section class="main">
             <header class="major">
-                <h2>Course Description</h2>
+                <h2>MECH208 Introduction to Technical Computing</h2>
             </header>
 
             <div class="course-block">
-                <h3><strong>MECH208 Introduction to Technical Computing</strong></h3>
+                <h3><strong>Course Description</strong></h3>
                 <span class="details">Fall 2024</span>
                 <p><strong>Course Description:</strong> This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</p>
 
