--- a/mech208.html
+++ b/mech208.html
@@ -63,7 +63,7 @@
                 <span class="details">Fall 2024</span>
                 <p><strong>Course Description:</strong> This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</p>
 
-                <p><strong>Course Objectives:</strong></p>
+                <h3><strong>Course Objectives:</strong></h3>
                 <ul>
                     <li>Use MATLAB to model and solve engineering problems.</li>
                     <li>Understand and apply numerical methods for engineering applications.</li>
@@ -71,7 +71,7 @@
                     <li>Develop technical computing skills for future coursework and careers.</li>
                 </ul>
 
-                <p><strong>Recommended Textbooks:</strong></p>
+                <h3><strong>Recommended Textbooks:</strong></h3>
                 <ul>
                     <li><em>Introduction to MATLAB for Engineers</em> by William J. Palm (ISBN: 9780073534879, McGraw-Hill Education, 2010).</li>
                     <li><em>Numerical Methods for Engineers</em> by Steven C. Chapra and Raymond P. Canale.</li>
