--- a/mech338.html
+++ b/mech338.html
@@ -55,15 +55,15 @@
 
         <section class="main">
             <header class="major">
-                <h2>Course Description</h2>
+                <h2>MECH338 Heat Transfer</h2>
             </header>
 
             <div class="course-block">
-                <h3><strong>MECH338 Heat Transfer</strong></h3>
+                <h3><strong>Course Description</strong></h3>
                 <span class="details">Fall 2024</span>
                 <p><strong>Course Description:</strong> This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. It introduces numerical methods such as finite-difference and finite-element analysis. Additionally, the course covers free and forced convection, along with radiation heat transfer.</p>
 
-                <p><strong>Course Objectives:</strong></p>
+                <h3><strong>Course Objectives:</strong></h3>
                 <ul>
                     <li>Apply heat conduction theory to steady and unsteady systems.</li>
                     <li>Use analytical and numerical methods to solve heat transfer problems.</li>
@@ -71,7 +71,7 @@
                     <li>Use MATLAB or similar tools to analyze real-world thermal systems.</li>
                 </ul>
 
-                <p><strong>Recommended Textbooks:</strong></p>
+                <h3><strong>Recommended Textbooks:</strong></h3>
                 <ul>
                     <li><em>Fundamentals of Heat and Mass Transfer</em> by Incropera, DeWitt, Bergman, and Lavine.</li>
                     <li><em>Heat Transfer</em> by J.P. Holman.</li>
