--- a/mech208.html
+++ b/mech208.html
@@ -61,7 +61,7 @@
             <div class="course-block">
                 <h3><strong>Course Description</strong></h3>
                 <span class="details">Fall 2024</span>
-                <p><strong>Course Description:</strong> This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</p>
+                This course introduces technical computing for engineering, focusing on the application of MATLAB to solve engineering problems. Topics include kinematics and kinetics, fluid flow, thermal systems, and fundamentals of machine learning. The course consists of 1 hour of lecture and 3 hours of laboratory work each week.</p>
 
                 <h3><strong>Course Objectives:</strong></h3>
                 <ul>
