--- a/mech338.html
+++ b/mech338.html
@@ -60,8 +60,7 @@
 
             <div class="course-block">
                 <h3><strong>Course Description</strong></h3>
-                <span class="details">Fall 2024</span>
-                <p><strong>Course Description:</strong> This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. It introduces numerical methods such as finite-difference and finite-element analysis. Additionally, the course covers free and forced convection, along with radiation heat transfer.</p>
+                This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. It introduces numerical methods such as finite-difference and finite-element analysis. Additionally, the course covers free and forced convection, along with radiation heat transfer.</p>
 
                 <h3><strong>Course Objectives:</strong></h3>
                 <ul>
