--- a/mech338.html
+++ b/mech338.html
@@ -62,7 +62,7 @@
                 <h3><strong>Course Description</strong></h3>
                 This course explores steady-state and transient (unsteady) heat conduction in one and two dimensions. It introduces numerical methods such as finite-difference and finite-element analysis. Additionally, the course covers free and forced convection, along with radiation heat transfer.</p>
 
-                <h3><strong>Course Objectives:</strong></h3>
+                <h3><strong>Course Objectives</strong></h3>
                 <ul>
                     <li>Apply heat conduction theory to steady and unsteady systems.</li>
                     <li>Use analytical and numerical methods to solve heat transfer problems.</li>
@@ -70,7 +70,7 @@
                     <li>Use MATLAB or similar tools to analyze real-world thermal systems.</li>
                 </ul>
 
-                <h3><strong>Recommended Textbooks:</strong></h3>
+                <h3><strong>Recommended Textbooks</strong></h3>
                 <ul>
                     <li><em>Fundamentals of Heat and Mass Transfer</em> by Incropera, DeWitt, Bergman, and Lavine.</li>
                     <li><em>Heat Transfer</em> by J.P. Holman.</li>
